2009-12-10  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: Ignore InvalidOperationException (used by the 
	new PdbCCiReader implementation) if the PDB is does not match 
	the assembly (DLL/EXE)

2009-06-10  Jesse Jones  <jesjones@mindspring.com>

	* TypeRocks.cs: Added AllSuperTypes rock.

2009-04-30  Jesse Jones  <jesjones@mindspring.com>

	* VariableDefinitionRocks.cs: Added IsGeneratedName rock.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* TypeRocks.cs: Resolve: remove. Implements: handle types
	with a null BaseType.
	* MethodRocks.cs: Resolve: remove. IsOverride: handle types
	with a null BaseType.
	* FieldRocks.cs: remove Resolve.

2008-12-30  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodRocks.cs (IsProperty, IsVisible): Check that resolved method
	is non null before continuing. Based on patch from Tamara Roberson.
	[partial fix for #462925]

2008-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* CustomAttributeRocks.cs: Use HasCustomAttributes
	* InstructionRocks.cs: Use HasParameters
	* MethodRocks.cs: Use HasConstraints and HasParameters
	* TypeRocks.cs: Use HasInterfaces, HasParameters, HasMethods and
	HasConstructors.

2008-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* FieldRocks.cs: Use HasCustomAttributes in IsGeneratedCode. Handle
	unresolvable fields in IsVisible.
	* MethodRocks.cs: Use HasCustomAttributes in IsGeneratedCode. Use
	HasParameters in IsEventCallback.
	* TypeRocks.cs: Use HasCustomAttributes in IsGeneratedCode. Handle
	unresolvable fields in IsFlag.

2008-11-19  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Make GetMethod smarter and check only the methods
	or the constructors when possible. Split Implements in two parts
	to remove some checks when recursion is needed. Also avoid recursion
	for checking the base types. Add IsPrimitive rock.

2008-11-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: Change the catch-all for a catch(FormatException)